Fix image distortion in gallery

--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -11,20 +11,20 @@
     }
     .galPicaRow{
         height:68vh;
-        overflow:auto;
+        overflow:scroll;
         /*border:1px solid blue;*/
     }
     .galPicaBox{
         display:flex;
 	    width: 80vw;
         height:100%;
-        overflow:auto;
+        overflow:scroll;
         background:White;
         /*border:1px solid red;*/
     }
     .galImg{
         max-width: 100%;
-        max-height: 100%;
+        /*max-height: 100%;*/
     }
     .galCountRow{
         height:10vh;
